fix trial button + even spacing with ctas

--- a/src/styles/home/home-hero.scss
+++ b/src/styles/home/home-hero.scss
@@ -22,7 +22,7 @@
     background: $white;
     box-shadow: 0 2px 4px rgba($black,.15);
     font-weight: $weight-bold;
-    margin-top: $xxs;
+    margin-top: $sm; // + 15 from the h3 for $md total
     transition: transform .2s ease-in-out;
 
     &:hover,
